Some fixes